<resources>
    <string name="app_name">diaryapp</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="splash_icon_description">Splash Icon</string>

    <string name="error_message_generic">Aconteceu algum erro :( Tente mais tarde.</string>

    <!--INITIAL-->
    <string name="button_text_initial_login">Logar</string>
    <string name="button_text_initial_register">Registrar-se</string>

    <!--LOGIN-->
    <string name="edit_text_email_hint">Digite seu email</string>
    <string name="edit_text_password_hint">Digite sua senha</string>
    <string name="button_text_login_send">Enviar</string>
    <string name="button_text_login_forgot">Esqueceu sua senha?</string>
    <string name="button_text_forgot_send">Recuperar</string>
    <string name="button_text_forgot_back">Voltar</string>

    <!--REGISTER-->
    <string name="edit_text_name_hint">Digite seu nome</string>
    <string name="edit_text_ddd_hint">Digite o DDD</string>
    <string name="edit_text_phone_hint">Digite seu número</string>
    <string name="edit_text_new_password_hint">Digite a senha</string>
    <string name="edit_text_confirm_password_hint">Digite a confirmação da senha</string>
    <string name="edit_text_pin_hint">0</string>
    <string name="button_text_register_next">Próximo</string>


</resources>