<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.register.RegisterFragment">

    <EditText
        android:id="@+id/name"
        style="@style/EditTextGraySoft"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:autofillHints="Nome"
        android:hint="@string/edit_text_name_hint"
        android:imeOptions="actionNext"
        android:inputType="text" />

    <EditText
        android:id="@+id/email"
        style="@style/EditTextGraySoft"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:autofillHints="Email"
        android:hint="@string/edit_text_email_hint"
        android:imeOptions="actionSend"
        android:inputType="textEmailAddress" />

    <LinearLayout
        android:id="@+id/ll_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/ddd"
            style="@style/EditTextGraySoft"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:autofillHints="DDD"
            android:hint="@string/edit_text_ddd_hint"
            android:imeOptions="actionSend"
            android:inputType="number"
            android:nextFocusForward="@+id/phone" />

        <EditText
            android:id="@+id/phone"
            style="@style/EditTextGraySoft"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:autofillHints="Phone"
            android:hint="@string/edit_text_phone_hint"
            android:imeOptions="actionSend"
            android:inputType="number" />

    </LinearLayout>

    <Button
        android:id="@+id/btn_register_next"
        style="@style/ButtonPrimaryColor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/button_text_register_next"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/ic_facebook"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:contentDescription="@string/splash_icon_description"
            android:src="@drawable/ic_facebook" />

        <ImageView
            android:id="@+id/ic_twitter"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:contentDescription="@string/splash_icon_description"
            android:src="@drawable/ic_twitter" />

        <ImageView
            android:id="@+id/ic_google_plus"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:contentDescription="@string/splash_icon_description"
            android:src="@drawable/ic_google_plus" />

    </LinearLayout>

</LinearLayout>