<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.register.PasswordFragment">

    <EditText
        android:id="@+id/password"
        style="@style/EditTextGraySoft"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:autofillHints="Senha"
        android:hint="@string/edit_text_new_password_hint"
        android:imeOptions="actionNext"
        android:inputType="textPassword"
        android:nextFocusForward="@+id/confirm_password" />

    <EditText
        android:id="@+id/confirm_password"
        style="@style/EditTextGraySoft"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:autofillHints="Confirmação da senha"
        android:hint="@string/edit_text_confirm_password_hint"
        android:imeOptions="actionSend"
        android:inputType="textPassword" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="40dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_password_next"
            style="@style/ButtonPrimaryColor"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:text="@string/button_text_register_next"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_password_back"
            style="@style/ButtonGrayMediumColor"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:text="@string/button_text_forgot_back"
            android:textStyle="bold" />

    </LinearLayout>
</LinearLayout>