<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.login.ForgotFragment">

    <EditText
        android:id="@+id/forgot"
        style="@style/EditTextGraySoft"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:autofillHints="Email"
        android:hint="@string/edit_text_email_hint"
        android:imeOptions="actionSend"
        android:inputType="textEmailAddress" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="40dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_forgot_send"
            style="@style/ButtonPrimaryColor"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginRight="10dp"
            android:text="@string/button_text_forgot_send"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_forgot_back"
            style="@style/ButtonGrayMediumColor"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:text="@string/button_text_forgot_back"
            android:textStyle="bold" />

    </LinearLayout>

</LinearLayout>